--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.9.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
