--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ts-node": "ts-node"
+    "ts-node": "ts-node",
+    "dev": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
-    "@types/node": "^18.11.15"
+    "@types/node": "^18.11.15",
+    "nodemon": "^2.0.20"
   }
 }
